plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
    id "com.diffplug.spotless" version "6.23.3"
}

group = 'com.blaybus'
version = '0.0.1-SNAPSHOT'
description = 'backend service for blaybus contest'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Core Web & REST
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation platform('me.paulschwarz:spring-dotenv-bom:5.1.0')
	runtimeOnly 'me.paulschwarz:springboot4-dotenv'
	testImplementation 'me.paulschwarz:springboot4-dotenv'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// Data Access
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'
	
	// REST Client
	implementation 'org.springframework.boot:spring-boot-starter-restclient'
	
	// JSON
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	
	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	
	// Monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	
	// Tracing
	implementation 'org.springframework.boot:spring-boot-micrometer-tracing-brave'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	
	// Development Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
}



tasks.named('test') {
	useJUnitPlatform()
}

checkstyle {
    toolVersion = '8.42'
    configFile = file("${rootDir}/rule-config/naver-checkstyle-rules.xml")
    maxWarnings = 0
    showViolations = true
}
checkstyleMain {
    configProperties = [
        'suppressionFile': "${rootDir}/rule-config/naver-checkstyle-suppressions.xml"
    ]
}
checkstyleTest {
	enabled = false
}

spotless {
    java {
        trimTrailingWhitespace() 
        endWithNewline() 
        removeUnusedImports() 
        eclipse().configFile("${rootDir}/rule-config/naver-eclipse-formatter.xml")
    }
}
